@@ -2,6 +2,7 @@
 - Added i18n localization/internationalization support, thanks davebol, see https://github.com/libgdx/libgdx/pull/1769
 - Possibility to override density on desktop to simulate mobile devices, see https://github.com/libgdx/libgdx/pull/1825
 - Progressive JPEG support through JPGD (https://code.google.com/p/jpeg-compressor/).
+- Mavenized JGLFW backend
 
 [1.0.1]
 - updated to RoboVM 0.12 (and so should you!)
